# hack-base

./: .gitignore  README.md  docker-compose.yaml
embedding/: .env.example  Dockerfile  calculate_embeddings.py  embedding_service.py  first_30_rows.csv  main.py  rag_rest.py  readme.md  requirements.txt  simple-rag-rest.py  simple-rag-tg.py
embedding/data/: first_30_rows.csv
embedding/pipeline_storage/: docstore.json  llama_cache
embedding/vectore_store/: embeddings_data.pkl  faiss_index.faiss
parsers/: .env.example  ethGlobalCommon.csv  ethglobalCommon.py  pyproject.toml
parsers/hack_parser/: main.py  settings.py
