[tool.poetry]
name = "hack-parser"
version = "0.1.0"
description = ""
authors = ["Arsenii Pechenkin <arspechen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.10"
environs = "^11.0.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
